[gd_scene load_steps=3 format=3 uid="uid://b0yxpjlkwwg6p"]

[ext_resource type="Script" path="res://UI/Menus/Main Menue.gd" id="1_dn3mb"]
[ext_resource type="Theme" uid="uid://dqt8ckud00u6" path="res://UI/new_theme.tres" id="2_wlpdl"]

[node name="MainMenue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dn3mb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "GAME NAME"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wlpdl")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = "BEGAIN"

[node name="Join" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../host")
focus_neighbor_bottom = NodePath("../settings")
focus_next = NodePath("../settings")
focus_previous = NodePath("../host")
text = "Join Game"

[node name="settings" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Join")
focus_neighbor_bottom = NodePath("../host")
focus_next = NodePath("../host")
focus_previous = NodePath("../Join")
text = "Settings"

[node name="host" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../settings")
focus_neighbor_bottom = NodePath("../Join")
focus_next = NodePath("../Join")
focus_previous = NodePath("../settings")
toggle_mode = true
text = "Host"

[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/host" to="." method="_on_host_pressed"]
